[tool.poetry]
name = "mysnow"
version = "0.1.0"
description = "Snowflake Infra as a code (demo project)"
authors = ["Dat Nguyen <dat@infinitelambda>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
# flows = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
